@@ -7,6 +7,7 @@
 # + webtoc = the webTOC file specification file
 #
 # Global variables:
+# - webpage: the top page of the extension web <webdir>/<extension>.html
 # - mode: text processing mode = HTML tag (<ul>, <p>, <pre>, ...)
 # - name: dir name of the extension (short name), i.e. .../name/
 # - package: package name, usually "gawk-name"
@@ -19,25 +20,46 @@
 # - require_api: required gawk API version
 # - require_gawkextlib: requires gawkextlib
 # - require_extra: required extra packages
+# - errormessage: array or messsage templates
+# - errmsg: multi-line error summary
+
+# Error processing file
+function filerror( code, file ) {
+    if (name != ".") {   # ignore errors for the home page
+        errmsg = errmsg sprintf(errormessage[code], file) "\n"
+    }
+}
+
+# Output to webpage file
+function webprint( line ) {
+    print line > webpage
+}
 
 # External command: copy file to web
-function copy_file( aux_file ) {
-    system("cp " aux_file " " webdir)
+function copy_file( aux_file ,            rc ) {
+    rc = system("cp " aux_file " " webdir)
+    if (rc) filerror("copy", aux_file)
+    return rc
 }
 
 # External command: convert file to web
-function convert_file( doc_file ) {
-    system("_web/makeweb-any.sh " doc_file " " webdir)
+function convert_file( doc_file ,            rc ) {
+    rc = system("_web/makeweb-any.sh " doc_file " " webdir)
+    sub(/\.md$/, "[.md]", doc_file)      # may be extra .md
+    if (rc==2) filerror("notfound", doc_file)
+    else if (rc) filerror("convert", doc_file)
+    return rc
 }
 
 # Include text from file
 function include_text( txt_file,      copy ) {
-    copy = 1
+    copy = -1
     while (copy && (getline line < txt_file) > 0) {
+        copy = 1
         if (line ~ /^[^[:space:]]/) {        # non indented, <p> mode
             set_mode("p")
         } else if (line ~ /[^[:space:]]/) {  # indented, <pre> mode
-            for (; space>0; space--) print ""
+            for (; space>0; space--) webprint("")
             set_mode("pre")
         } else if (mode=="pre") {            # blank line in <pre> mode
             space++
@@ -54,14 +76,18 @@ function include_text( txt_file,      copy ) {
                 # do not reflow
                 line = "<br />" line "<br />"
             }
-            print line
+            webprint(line)
         }
     }
+    if (copy==-1) filerror("empty", txt_file)
+    return copy
 }
 
 # Parse the configure.ac file
-function parse_configure( config_ac,          line, f ) {
+function parse_configure( config_ac,          line, f, done ) {
+    done = 0
     while ((getline line < config_ac) > 0) {
+        done = 1
         if (line ~ /^AC_INIT/) {
             split(line, f, /,[[:space:]]*/)
             version = f[2]
@@ -69,11 +95,15 @@ function parse_configure( config_ac,          line, f ) {
             break
         }
     }
+    if (!done) filerror("empty", config_ac)
+    return done
 }
 
 # Parse the package.spec.in file
-function parse_spec( spec_in,            line, fd ) {
+function parse_spec( spec_in,            line, fd, done ) {
+    done = -1
     while ((getline line < spec_in) > 0) {
+        done = 0
         line = trim(line)  # discard leading and trailing space
         if (line ~ /^Summary:/) {
             summary = gensub(/Summary:[[:space:]]*/, "", 1, line)
@@ -102,6 +132,8 @@ function parse_spec( spec_in,            line, fd ) {
             }
         }
     }
+    if (done) filerror("empty", spec_in)
+    return done
 }
 
 # Process the webTOC file (from second line)
@@ -119,16 +151,16 @@ function process_webTOC( tocfile,           line, f, fn ) {
         } else if (line ~ "\\*->") {            # link URL
             split(line, f, /[[:space:]]*\*->[[:space:]]*/)
             set_mode("ul")
-            print "<li>" link_external(f[2], f[1]) "</li>"
+            webprint("<li>" link_external(f[2], f[1]) "</li>")
         } else if (line ~ "->") {               # convert and link file
             split(line, f, /[[:space:]]*->[[:space:]]*/)
             convert_file(inputdir "/" f[2])
             fn = base_name(f[2])
             set_mode("ul")
-            print "<li>" link(fn ".html", f[1]) " [" link(fn ".pdf", "PDF version") "]</li>"
+            webprint("<li>" link(fn ".html", f[1]) " [" link(fn ".pdf", "PDF version") "]</li>")
         } else if (line !~ /^[[:space:]]*$/) {  # section header
             set_mode("")
-            print "<h2>" line "</h2>"
+            webprint("<h2>" line "</h2>")
         }                                       # blank line, ignored
     }
     set_mode("")
@@ -164,19 +196,25 @@ function set_mode( newmode ) {
         # ignore space at end of <pre> blocks
         space = 0
         # close the current mode, if not null
-        if (mode) print "</" mode ">"
+        if (mode) webprint("</" mode ">")
         # record the new mode
         mode = newmode
         # open the new mode, if not null
-        if (mode) print "<" mode ">"
+        if (mode) webprint("<" mode ">")
     }
 }
 
 # Start processing the page template
 BEGIN {
+    errormessage["copy"] = "Error copying %s to the web directory"
+    errormessage["empty"] = "File %s missing or empty"
+    errormessage["notfound"] = "File %s not found"
+    errormessage["convert"] = "Error converting %s to HTML/PDF"
+    name = gensub(/.*\//, "", 1, webdir)  # last component of the webdir path
+    webpage = webdir "/" name ".html"
+
     parse_configure(inputdir "/configure.ac")
     parse_spec(inputdir "/packaging/" package ".spec.in")
-    name = gensub(/.*\//, "", 1, webdir)  # last component of the webdir path
 }
 
 # Package name as title
@@ -184,7 +222,7 @@ BEGIN {
     if (! package) {
         package = "gawk-" name
     }
-    print gensub(/@TITLE@/, package, 1, $0)  # package name
+    webprint(gensub(/@TITLE@/, package, 1, $0))  # package name
     next
 }
 
@@ -198,14 +236,14 @@ BEGIN {
             header = package " extension of GNU awk"  # default header
         }
     }
-    print gensub(/@HEADER@/, header, 1, $0)  # page header
+    webprint(gensub(/@HEADER@/, header, 1, $0))  # page header
     next
 }
 
 # Version number from the spec file
 /@VERSION@/ {
     if (version) {
-        print gensub(/@VERSION@/, version, 1, $0)  # package version
+        webprint(gensub(/@VERSION@/, version, 1, $0))  # package version
     }
     next
 }
@@ -213,7 +251,7 @@ BEGIN {
 # License given from the spec file
 /@LICENSE@/ {
     if (license) {
-        print gensub(/@LICENSE@/, link( license_file, license), 1, $0)  # package license
+        webprint(gensub(/@LICENSE@/, link( license_file, license), 1, $0))  # package license
     }
     next
 }
@@ -225,7 +263,7 @@ BEGIN {
     if (require_gawkextlib) require = require ", " require_gawkextlib
     if (require_extra) require = require require_extra
     if (require) {
-        print gensub(/@REQUIRE@/, substr(require, 3), 1, $0)  # requirements
+        webprint(gensub(/@REQUIRE@/, substr(require, 3), 1, $0))  # requirements
     }
     next
 }
@@ -233,7 +271,7 @@ BEGIN {
 # Brief description from the spec file
 /@SUMMARY@/ {
     if (description) {
-        print gensub(/@SUMMARY@/, description, 1, $0)  # package description
+        webprint(gensub(/@SUMMARY@/, description, 1, $0))  # package description
     }
     next
 }
@@ -246,5 +284,15 @@ BEGIN {
 
 # Literal content
 {
-    print
+    webprint($0)
+}
+
+# Print error(s), if any
+END {
+    if (errmsg) {
+        print "=============================="
+        print "makeweb: *** error summary ***"
+        print "=============================="
+        print errmsg
+    }
 }
