@@ -22,6 +22,11 @@
 # INPUTDIR/
   # - webTOC
 
+if [ $# -le 0 ]; then
+  echo 'Usage: ./makeweb.sh  extension  [input-directory]'
+  exit 1
+fi
+
 # Input and output directories
 TOOLDIR=`dirname $0`
 EXTDIR=$TOOLDIR/$1
@@ -29,6 +34,9 @@ WEBDIR=$TOOLDIR/_web/$1
 if [ $# -gt 1 ]
 then INPUTDIR=$2
 else INPUTDIR=$TOOLDIR/$1
+fi
+if [ ! -e $INPUTDIR ]
+then echo "makeweb: Input directory $INPUTDIR not found" && exit 1
 fi
 
 # Web page specification
@@ -40,10 +48,6 @@ else echo "makeweb: File $EXTDIR/webTOC not found" && exit 1
 fi
 fi
 
-# echo $TOOLDIR
-# echo $INPUTDIR
-# echo $WEBDIR
-
 # Create the web directory if necessary
 if [ ! -e $WEBDIR ]
 then mkdir $WEBDIR
@@ -52,10 +56,8 @@ if [ ! -d $WEBDIR ]
 then echo "makeweb: Invalid web directory $WEBDIR" && exit 1
 fi
 
-# cat $INPUTDIR/webTOC
-
 # Run the web generator
-gawk -f $TOOLDIR/_web/makeweb.awk -v webdir=$WEBDIR -v inputdir=$INPUTDIR -v webtoc=$WEBTOC $TOOLDIR/_web/template.html > $WEBDIR/$1.html
+gawk -f $TOOLDIR/_web/makeweb.awk -v webdir=$WEBDIR -v inputdir=$INPUTDIR -v webtoc=$WEBTOC $TOOLDIR/_web/template.html
 # and remove the fake ..html if it exists
 if [ -e $WEBDIR/..html ]
 then rm $WEBDIR/..html
